tests/expectations/parser/type_/signature_verify_bad_syntax_fail.out
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found 'signature'
    --> test:4:23
     |
   4 |         let a: bool = signature.verify(s, a, v);
     |                       ^^^^^^^^^
